exports[`test the subscription component matches the snapshot 1`] = `
<div>
  <span
    aria-label="Yoast SEO is inactive"
    className="gUXWlw"
    role="img" />
  <span
    aria-label="Local SEO is inactive"
    className="czkLho"
    role="img" />
  <span
    aria-label="Video SEO is active"
    className="kSlIAP"
    role="img" />
  <span
    aria-label="News SEO is inactive"
    className="icqtKc"
    role="img" />
  <span
    aria-label="WooCommerce SEO is active"
    className="eXOupU"
    role="img" />
  <span
    aria-label="Local SEO for Woo is inactive"
    className="XVeDT"
    role="img" />
</div>
`;

exports[`test the subscription component without active subscriptions using the default matches the snapshot 1`] = `
<div>
  <span
    aria-label="Yoast SEO is inactive"
    className="gUXWlw"
    role="img" />
  <span
    aria-label="Local SEO is inactive"
    className="czkLho"
    role="img" />
  <span
    aria-label="Video SEO is inactive"
    className="cgPUis"
    role="img" />
  <span
    aria-label="News SEO is inactive"
    className="icqtKc"
    role="img" />
  <span
    aria-label="WooCommerce SEO is inactive"
    className="dGZexo"
    role="img" />
  <span
    aria-label="Local SEO for Woo is inactive"
    className="XVeDT"
    role="img" />
</div>
`;
